--- a/css/style.css
+++ b/css/style.css
@@ -555,17 +555,25 @@ div#results .product button.addToCart {
 }
 div#productName {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-gap: 30px;
 }
 div#productName img {
     object-fit: contain;
-    height: 150px;
+    max-width: 150px;
     width: 100%;
     mix-blend-mode: multiply;
 }
-div#productName h2 {
-    font-size: 18px;
+.productAll {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 40px;
+}
+.productAll h4 {
+    font-size: 23px;
+    margin: 0;
 }
 section#hero {
     padding: 35px 0;
@@ -606,6 +614,79 @@ a.shopLink {
     color: #212121;
 }
 
+div#cart button {
+    margin-left: 8px;
+    background: #ccc;
+    color: #212121;
+    padding: 5px;
+    font-size: 13px;
+    border: 0;
+    border-radius: 5px;
+}
+div#cart ul {
+    padding: 0;
+}
+div#cart li:nth-of-type(even) {
+    background: #e4e4e4;
+}
+div#cart li {
+    list-style: none;
+    border-bottom: 1px solid #e4e4e4;
+    padding: 10px;
+}
+.chat-container {
+    max-width: 450px;
+    width: 100%;
+    border: 1px solid #2ad0d6;
+    padding: 15px;
+    border-radius: 20px 20px 0 0;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background: rgba(255 255 255 / 95%);
+    transition: .5s;
+    margin-bottom: -210px;
+}
+.chat-container.showChatBox {
+    margin-bottom:0;
+}
+.chat-container input {
+    font-size: 16px;
+}
+button#send-btn {
+    font-size: 16px;
+    padding: 5px 15px;
+}
+.message.user {
+    font-size: 16px;
+}
+.chat-container h4 {
+    margin: 0;
+    font-size: 15px;
+    background: #1ad3e1;
+    color: #fff;
+    padding: 10px;
+    margin-bottom: 15px;
+    text-align: center;
+    position: absolute;
+    width: 80px;
+    border-radius: 30px;
+    right: 0;
+    top: -87px;
+    cursor: pointer;
+}
+.chat-container h4:before {
+    content: "";
+    position: absolute;
+    right: 17px;
+    bottom: -19px;
+    width: 0;
+    height: 0;
+    border-top: 0px solid transparent;
+    border-right: 19px solid #1ad3e1;
+    border-bottom: 26px solid transparent;
+    transform: rotateY(180deg);
+}
 /* medium */
 
 @media screen and (max-width:768px) {
